syntax = "proto3";
package storage;

option go_package = "../.;storage";

message ProtoGuild {
    string name = 1;
    string command_indicator = 2;
    string announce_channel = 3;
    string signup_channel = 4;
    string admin_channel = 5;
    string announce_to = 6;
    string admin_role = 9;
    bool show_after_signup = 7;
    bool show_after_withdraw = 8;
    bool hide_reactions_announce = 10;
    bool hide_reactions_show = 11;
}